--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,11 @@
             <version>7.1.0</version>
             <scope>test</scope>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.4.1</version>
+        </dependency>
     </dependencies>
-
-
 </project>
