--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!--<forkCount>3</forkCount>-->
-                    <!--<reuseForks>true</reuseForks>-->
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                </configuration>
+                <!--<configuration>-->
+                    <!--&lt;!&ndash;<forkCount>3</forkCount>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<reuseForks>true</reuseForks>&ndash;&gt;-->
+                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+                <!--</configuration>-->
+                <version>3.0.0-M5</version>
             </plugin>
         </plugins>
     </build>
