Committing config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: google-chrome --version
       - run:
           name: Running tests
-          command: mvn clean test -Dtest=ProductsTest
+          command: mvn clean test -Dtest=LoginTest
       - run:
           name: Generate allure report
           command: mvn allure:report
