Committing config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,7 @@ jobs:
           command: mvn allure:report
           when: always
       - store_test_results:
-          path: target/allure-results
-#          path: target/surefire-reports/junitreports
+          path: target/surefire-reports/junitreports
           when: always
       - store_artifacts:
           path: target/site/allure-maven-plugin/
