--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
